[package]
name = "strand"
description = "A Zincati lock backend for stateful workloads."
version = "0.1.0"
edition = "2021"
authors = ["Nikhil Jha <njha@ocf.berkeley.edu>"]

[dependencies]
kube = { version = "0.76.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25", "schemars"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "1.0.37"
serde_json = "1.0.87"
async-trait = "0.1.58"
axum = "0.5.17"
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }

[lib]
name = "strand"

[[bin]]
name = "strand"
path = "src/main.rs"
